[package]
name = "blang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.5"
lazy_static = "1.4.0"
llvm-config = "0.1.0"
regex = "1.8.4"
target-lexicon = "0.12.8"
llvm-sys = "160"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
colored = "2.0.4"

[features]
generics = []
