[package]
name = "blang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.5"
lazy_static = "1.4.0"
llvm-config = "0.1.0"
regex = "1.8.4"
target-lexicon = "0.12.8"
llvm-sys = "180"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
colored = "2.0.4"
flame = "0.2.2"
flamer = "0.5.0"
logos = "0.14.0"

[[bin]]
name = "blang"
path = "src/main.rs"