[package]
name = "blang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.5"
llvm-sys = { version="180"  , features=["prefer-static"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
colored = "2.0.4"
flame = "0.2.2"
flamer = "0.5.0"
logos = "0.14.0"
base-62 = "0.1.1"
rayon = "1.10.0"

[[bin]]
name = "blang"
path = "src/main.rs"
